# llama3.1

./: .env  pyproject.toml
llama3/1/: main.py
